src/test/compile-fail/keyword.rs
#[legacy_exports]
mod break {
    //~^ ERROR found `break` in ident position
}